@@ -1,3 +1,8 @@
+2015-02-06  Artur Malabarba  <bruce.connor.am@gmail.com>
+
+	* doc-view.el (doc-view-kill-proc-and-buffer): Obsolete. Use
+	`image-kill-buffer' instead.
+
 2015-02-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
 	* net/ldap.el (ldap-search-internal): Fix docstring.
